@@ -17,13 +17,13 @@ import uk.gov.hmcts.reform.et.syaapi.model.Role;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import static org.apache.http.client.methods.RequestBuilder.post;
 import static org.apache.http.entity.ContentType.APPLICATION_JSON;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
 import static org.springframework.http.HttpStatus.CREATED;
 import static org.springframework.http.HttpStatus.OK;
 import static org.springframework.http.MediaType.APPLICATION_FORM_URLENCODED_VALUE;
@@ -45,7 +45,7 @@ public class IdamTestApiRequests {
             "ATestForename",
             "ATestSurname",
             USER_PASSWORD,
-            Collections.singletonList(new Role("citizen"))
+            List.of(new Role("citizen"), new Role("caseworker-employment-api"))
         );
 
         String body = new ObjectMapper().writeValueAsString(createUser);
@@ -59,7 +59,9 @@ public class IdamTestApiRequests {
                                                              .setEntity(new StringEntity(body, APPLICATION_JSON))
                                                              .build());
 
-        assertEquals(CREATED.value(), createUserResponse.getStatusLine().getStatusCode());
+        int statusCode = createUserResponse.getStatusLine().getStatusCode();
+
+        assertTrue(statusCode == CREATED.value() || statusCode == OK.value());
     }
 
     public String getAccessToken(String email) throws IOException {
